# endstone-freemarket

./: CMakeLists.txt  README.md  README_zh-CN.md  pyproject.toml  思考.txt
.github/workflows/: build.yml
include/: DataBase.h  Market_Action.cpp  Market_Action.h  database.h  database.hpp  freemarket.h  global.h  item_data.hpp  item_serializer.hpp  lang.json  market_action.h  market_core.h  menu.h  menu_helpers.hpp  nbt_tool.hpp  string_utils.hpp  trade_engine.hpp  translate.h
language/: en_US.json  zh_CN.json
language/en_US/: lang.json
language/zh_CN/: lang.json
src/: freemarket.cpp  item_serializer.cpp  market_action.cpp  market_core.cpp  menu.cpp  menu_helpers.cpp  string_utils.cpp  trade_engine.cpp  version.h.in
src/endstone_freemarket/: __init__.py  freemarket.py
