[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-freemarket"
version = "0.0.4.dev5"
description = "在您的endstone服务器中加入自由市场经济！"
authors = [
    { name = "yuhang", email = "keepsecret@nothing.mc" },
]
keywords = ["endstone", "plugin", "freemarket"]
[project.urls]
Homepage = "https://github.com/yuhangle"
[project.entry-points."endstone"]
freemarket = "endstone_freemarket:freemarket"